--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel =”stylesheet” href ="https://swjsk1222.github.io/portfolio-demo/style.css"/>
+    <link rel =”stylesheet” href ="https://swjsk1222.github.io/portfolio-demo/style.css?12133"/>
    </head>
    <body>
 
