--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel =”stylesheet” href ="styles.css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
    </head>
    <body>
 
