--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2>skill</h2>
           <div class="D3">
             <div class="D4">
-              <img src="img/htmlcss.jpg" width="100" height="100">
+              <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/htmlcss.jpg" width="100" height="100">
             </div>
             <div class="D5">
               <h3>html+css</h3>
@@ -77,7 +77,7 @@
           </div>
           <div class="D6">  
             <div class="D7">  
-              <img src="img/javascript.png" width="100" height="100">
+              <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/javascript.png" width="100" height="100">
             </div>
             <div class="D8">
               <h3>javascript</h3>
@@ -90,7 +90,7 @@
         <div class="E">
           <h2>製作物</h2>
           <p>works</p>
-          <img src="img/icon.png">
+          <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/icon.png">
         </div>
         <section>
           <h2>お問い合わせ</h2>
