--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <input type="hidden" name="accessKey" value=" 8671350f-d125-4597-adbb-39e144ab5ab3">
             <input type="hidden" name="subject" value="swjsk1222@gmail.com">
             <input type="hidden" name="replyTo" value="@">
-            <input type="hidden" name="redirectTo" value="https://example.com/contact/success">
+            <input type="hidden" name="redirectTo" value="https://swjsk1222.github.io/swjsk.github.io/">
             <input type="submit" value="送信">
           </form>
         </section>
