--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
+    <link rel="stylesheet" href="swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
  <body>
@@ -33,7 +33,7 @@
                 <li class="No5"><a href="#production">
                   production<span class="production">
                   製作物</span></a></li>
-                  
+
                 <li class="No6"><a href="#contact">contact
                   <span class="contact">お問い合わせ</span></a></li>
               </ul>
@@ -45,8 +45,7 @@
       <main>
 
         <div class="A"  name="top">
-
-          <!-- <h2>はじめに</h2> -->
+          <h2>はじめに</h2>
           <p class="A1">プログラミング初心者です。2020/5/21、プログラミング勉強開始。2020/7/30、ポートフォリオ製作開始。ひと月程度製作を中断しましたが、専門学生の私が隙間時間に勉強して作りあげました。</p>
         </div>
         <hr class="G" width="200px" id="profile">
@@ -83,7 +82,7 @@
 
             <div class="D3">
               <div class="D4">
-                <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/htmlcss.jpg?raw=true" width="100" height="100">
+                <img src="img/htmlcss.jpg" width="100" height="100">
               </div>
               <div class="D5">
                 <h3>html+css</h3>
@@ -95,7 +94,7 @@
             </div>
             <div class="D6">  
               <div class="D7">  
-                <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/javascript.png?raw=true" width="100" height="100">
+                <img src="img/javascript.png" width="100" height="100">
               </div>
               <div class="D8">
                 <h3>javascript</h3>
@@ -110,7 +109,7 @@
         <div class="E">
           <h2>製作物</h2>
           <p>works</p>
-          <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/icon.png?raw=true" width="60%">
+          <img src="img/icon.png" width="60%">
         </div>
 
         <hr class="G4" width="200px" id="contact">
