--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="A"  name="top">
           <h2>はじめに</h2>
-          <p class="A1">プログラミング初心者です。2020/5/21、プログラミング勉強開始。2020/7/30、ポートフォリオ製作開始。ひと月程度製作を中断しましたが、専門学生の私が隙間時間に勉強して作りあげました。</p>
+          <p class="A1">プログラミング初心者です。2020/7/21、プログラミング勉強開始。2020/9/15、ポートフォリオ製作開始。専門学生の私が隙間時間に勉強して作りあげました。</p>
         </div>
         <hr class="G" width="200px" id="profile">
         
