--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
+    <link rel="stylesheet" href="swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
  <body>
@@ -45,23 +45,35 @@
       <main>
 
         <div class="A"  name="top">
-          <h2>はじめに</h2>
-          <p class="A1">プログラミング初心者です。2020/6/21、プログラミング勉強開始。2020/9/15、ポートフォリオ製作開始。専門学生の私が隙間時間に勉強して作りあげました。これからも他の言語を勉強して定期的に更新していくつもりです。</p>
-        </div>
-        <hr class="G" width="200px" id="profile">
-        
+          <!-- <h2>はじめに</h2> -->
+
+            <p class="A1">プログラミング初心者です。2020/5/21、プログラミング勉強開始。2020/7/30、ポートフォリオ製作開始。ひと月程度製作を中断しましたが、専門学生の私が隙間時間に勉強して作りあげました。</p>
+            
+          </div>
+          <!-- <hr class="G" width="200px" id="profile"> -->
+
+          <div class="B0"></div>
+        <div class="B00"></div>
         <div class="B">
-          <h2>自己紹介</h2>
-          <p>あまと申します。<br>
-            福岡県在住の専門学生です。<br>
-            webサイト修正、HTML+CSSコーディングなど<br>製作いたします。その他ご要望があれば<br>ご相談ください。
-          </p>
-        </div>
+          <div class="B1">
+            <div class="B2">
+              <h2>自己紹介</h2>
+              <ul>
+                <li>名前  天本創喜（アマモトソウキ）と申します。</li>
+                <li>経歴  現在福岡県在住の専門学生です。
+                </li>
+                <li>学生時代の経験や専門学校に通っているため、調理関係に詳しい</li>
+                <li>webサイト修正、HTML+CSSコーディングなど製作いたします。その他ご要望があればご相談ください。
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>  
         <hr class="G1" width="200px" id="works">
         <div class="C">
           <div class="C1">
             <h2>作業について</h2>
-            <h3>作業時間  AM10:00～PM11:00</h3>  
+            <h3>作業時間  AM10:00～PM8:00</h3>  
             <p>上記の時間で作業いたします。チャットワーク、Skype、電話などでも時間内でしたら迅速に対応いたします。急な要望にも沿えるように密接な連絡を心がけております。</p>
             <h3>時間の順守</h3>
             <p>提出期限、順守致します。</p>
@@ -76,40 +88,50 @@
           </div>
         </div>
         <hr class="G2" width="200px" id="skill">
-        <div class="D">
-          <h2>skill</h2>
-          <div class="D10"> 
-
-            <div class="D3">
-              <div class="D4">
-                <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/htmlcss.jpg?raw=true" width="100" height="100">
+        <div class="DD">
+          <div class="D">
+            <h2>skill</h2>
+            <div class="D0">
+              <div class="D00">
+                <img src="img/kureha.png" width="50px"height="50px">
               </div>
-              <div class="D5">
-                <h3>html+css</h3>
-                <p><span class="D1" data-rate="4"></span></p>
-                <p class="D9">webサイト修正やコーディング
-
-                  など致します。</p>
+              <h3>デザイン・コーディング</h3>
+            </div>
+            <div class="D10"> 
+              <div class="D3">
+                <div class="D5">
+                  <h3>html+css</h3>
+                  <p class="D9">webサイト修正やコーディング
+                    など致します。
+                  </p>
+                </div>
+                <div class="D55">
+                  <p><span class="D1" data-rate="4"></span></p>
+                </div>
+              </div>
+              <div class="D6">  
+                <div class="D8">
+                  <h3>javascript</h3>
+                  <P>勉強中です。</P>
+                </div>
+                <div class="D88">
+                  <p><span class="D2" data-rate="2"></span></p>
+                </div>
               </div>
             </div>
-            <div class="D6">  
-              <div class="D7">  
-                <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/javascript.png?raw=true" width="100" height="100">
-              </div>
-              <div class="D8">
-                <h3>javascript</h3>
-                <p><span class="D2" data-rate="2"></span></p>
-                <P>勉強中です。</P>
-              </div>
-            </div>
+            <D11>
+              <h3>仕事内容</h3>
+            </D11>
+            <h4>web製作</h4>
+            <p>レスポンシブ対応のサイトも作成いたします。納品後も簡単に編集しやすいように仕上げます。Wordpress、できます。</p>
+            <h4></h4>
           </div>
         </div>
-
         <hr class="G3" width="200px" id="production">
         <div class="E">
           <h2>製作物</h2>
           <p>works</p>
-          <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/icon.png?raw=true" width="60%">
+
         </div>
 
         <hr class="G4" width="200px" id="contact">
