--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My portfolio</title>
     <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
+    <link rel="stylesheet" href="https://swjsk1222.github.io/swjsk.github.io/style.css" type="text/css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
  <body>
