--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h2>skill</h2>
             <div class="D0">
               <div class="D00">
-                <img src="img/kureha.png" width="50px"height="50px">
+                <img src="https://github.com/swjsk1222/swjsk.github.io/blob/master/kureha.png?raw=true" width="50px"height="50px">
               </div>
               <h3>デザイン・コーディング</h3>
             </div>
